src/apigateway/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backoffice
              domains: ["*"]
              routes:
              - match: { prefix: "/v1/customers" }
                route: 
                  cluster: customer_service
                  cors: 
                    allow_origin_string_match: {prefix: "*"}
                    allow_methods: GET,POST,PUT,OPTIONS
                    allow_headers: "keep-alive,authorization,content-type,cache-control"
                    max_age: "1728000"
                    filter_enabled:
                      default_value: {numerator: 100, denominator: HUNDRED}
                      runtime_key: cors.www.enabled
              - match: { prefix: "/v1/resorts" }
                route: 
                  cluster: resort_service
                  cors: 
                    allow_origin_string_match: {prefix: "*"}
                    allow_methods: POST,OPTIONS
                    allow_headers: "keep-alive,authorization,content-type,cache-control"
                    max_age: "1728000"
                    filter_enabled:
                      default_value: {numerator: 100, denominator: HUNDRED}
                      runtime_key: cors.www.enabled
              - match: { prefix: "/v1/customers" }
                route: { cluster: customer_service }
              - match: { prefix: "/v1/resorts" }
                route: { cluster: resort_service }
          http_filters:
            - name: envoy.filters.http.cors
            - name: envoy.filters.http.router
  clusters:
  - name: customer_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: customer_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: customerservice
                port_value: 8000
  - name: resort_service
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: resort_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: resortservice
                port_value: 8000
